# iRoom

./: .gitignore
Arduino/: CMakeLists.txt  sensors.c
Arduino/center/: center.c
Scripts/: index.php  m.index.php  status.txt
Scripts/assets/js/: mobile.js
Scripts/class/EG_Julien/: status.txt
Scripts/mobile/: index.php
Scripts/mobile/assets/css/: mobile.css
Scripts/mobile/assets/js/: mobile.js
Scripts/views/mobile/: login.php
Scripts/views/server/: status.txt
iRoom/: config.xml  ionic.config.json  package.json
iRoom/www/: index.html
iRoom/www/js/: controllers.js  routes.js
iRoom/www/templates/: iServer.html
www/API/: index.php
www/API/class/EG_Julien/: Ajax.php  Server.php
www/App/: README.md  index.php
www/App/assets/doc/: footer.php  header.php
www/App/assets/js/: mobile.js
www/www/assets/css/: style.css
www/www/assets/doc/: header.php
www/www/assets/js/: app.js
www/www/class/EG_Julien/: Ajax.php  Server.php
www/www/mobile/assets/errors/: 404.php
www/www/mobile/class/EG_Julien/: Main.php
www/www/views/: account.php  login.php
www/www/views/server/: info.php  setup.php
