# cmake_minimum_required(VERSION <specify CMake version here>)
project(Arduino)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    Build/core/abi.cpp.d
    Build/core/abi.cpp.o
    Build/core/CDC.cpp.d
    Build/core/CDC.cpp.o
    Build/core/core.a
    Build/core/HardwareSerial.cpp.d
    Build/core/HardwareSerial.cpp.o
    Build/core/HardwareSerial0.cpp.d
    Build/core/HardwareSerial0.cpp.o
    Build/core/HardwareSerial1.cpp.d
    Build/core/HardwareSerial1.cpp.o
    Build/core/HardwareSerial2.cpp.d
    Build/core/HardwareSerial2.cpp.o
    Build/core/HardwareSerial3.cpp.d
    Build/core/HardwareSerial3.cpp.o
    Build/core/hooks.c.d
    Build/core/hooks.c.o
    Build/core/IPAddress.cpp.d
    Build/core/IPAddress.cpp.o
    Build/core/main.cpp.d
    Build/core/main.cpp.o
    Build/core/new.cpp.d
    Build/core/new.cpp.o
    Build/core/PluggableUSB.cpp.d
    Build/core/PluggableUSB.cpp.o
    Build/core/Print.cpp.d
    Build/core/Print.cpp.o
    Build/core/Stream.cpp.d
    Build/core/Stream.cpp.o
    Build/core/Tone.cpp.d
    Build/core/Tone.cpp.o
    Build/core/USBCore.cpp.d
    Build/core/USBCore.cpp.o
    Build/core/WInterrupts.c.d
    Build/core/WInterrupts.c.o
    Build/core/wiring.c.d
    Build/core/wiring.c.o
    Build/core/wiring_analog.c.d
    Build/core/wiring_analog.c.o
    Build/core/wiring_digital.c.d
    Build/core/wiring_digital.c.o
    Build/core/wiring_pulse.c.d
    Build/core/wiring_pulse.c.o
    Build/core/wiring_pulse.S.o
    Build/core/wiring_shift.c.d
    Build/core/wiring_shift.c.o
    Build/core/WMath.cpp.d
    Build/core/WMath.cpp.o
    Build/core/WString.cpp.d
    Build/core/WString.cpp.o
    Build/libraries/LiquidCrystal/LiquidCrystal.cpp.d
    Build/libraries/LiquidCrystal/LiquidCrystal.cpp.o
    Build/libraries/SoftwareSerial/SoftwareSerial.cpp.d
    Build/libraries/SoftwareSerial/SoftwareSerial.cpp.o
    Build/preproc/ctags_target_for_gcc_minus_e.cpp
    Build/sketch/sensors.c.cpp
    Build/sketch/sensors.c.cpp.d
    Build/sketch/sensors.c.cpp.o
    Build/build.options.json
    Build/sensors.c.eep
    Build/sensors.c.elf
    Build/sensors.c.hex
    Build/sensors.c.with_bootloader.hex
    center/Build/core/abi.cpp.d
    center/Build/core/abi.cpp.o
    center/Build/core/CDC.cpp.d
    center/Build/core/CDC.cpp.o
    center/Build/core/core.a
    center/Build/core/HardwareSerial.cpp.d
    center/Build/core/HardwareSerial.cpp.o
    center/Build/core/HardwareSerial0.cpp.d
    center/Build/core/HardwareSerial0.cpp.o
    center/Build/core/HardwareSerial1.cpp.d
    center/Build/core/HardwareSerial1.cpp.o
    center/Build/core/HardwareSerial2.cpp.d
    center/Build/core/HardwareSerial2.cpp.o
    center/Build/core/HardwareSerial3.cpp.d
    center/Build/core/HardwareSerial3.cpp.o
    center/Build/core/hooks.c.d
    center/Build/core/hooks.c.o
    center/Build/core/IPAddress.cpp.d
    center/Build/core/IPAddress.cpp.o
    center/Build/core/main.cpp.d
    center/Build/core/main.cpp.o
    center/Build/core/new.cpp.d
    center/Build/core/new.cpp.o
    center/Build/core/PluggableUSB.cpp.d
    center/Build/core/PluggableUSB.cpp.o
    center/Build/core/Print.cpp.d
    center/Build/core/Print.cpp.o
    center/Build/core/Stream.cpp.d
    center/Build/core/Stream.cpp.o
    center/Build/core/Tone.cpp.d
    center/Build/core/Tone.cpp.o
    center/Build/core/USBCore.cpp.d
    center/Build/core/USBCore.cpp.o
    center/Build/core/WInterrupts.c.d
    center/Build/core/WInterrupts.c.o
    center/Build/core/wiring.c.d
    center/Build/core/wiring.c.o
    center/Build/core/wiring_analog.c.d
    center/Build/core/wiring_analog.c.o
    center/Build/core/wiring_digital.c.d
    center/Build/core/wiring_digital.c.o
    center/Build/core/wiring_pulse.c.d
    center/Build/core/wiring_pulse.c.o
    center/Build/core/wiring_pulse.S.o
    center/Build/core/wiring_shift.c.d
    center/Build/core/wiring_shift.c.o
    center/Build/core/WMath.cpp.d
    center/Build/core/WMath.cpp.o
    center/Build/core/WString.cpp.d
    center/Build/core/WString.cpp.o
    center/Build/libraries/SoftwareSerial/SoftwareSerial.cpp.d
    center/Build/libraries/SoftwareSerial/SoftwareSerial.cpp.o
    center/Build/preproc/ctags_target_for_gcc_minus_e.cpp
    center/Build/sketch/center.c.cpp
    center/Build/sketch/center.c.cpp.d
    center/Build/sketch/center.c.cpp.o
    center/Build/build.options.json
    center/Build/center.c.eep
    center/Build/center.c.elf
    center/Build/center.c.hex
    center/Build/center.c.with_bootloader.hex
    center/center.c
    .gitattributes
    .gitignore
    README.md
    sensors.c
    speech.html)

add_executable(Arduino ${SOURCE_FILES})